# ClipBot

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.mjs  update.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: cmd.rs  mod.rs  setup.rs  tray.rs
src/assets/css/: iconfont.css  style.css
src/common/: clipboard.ts  db.ts  index.ts
src/components/: HeadBar.vue  List.vue  ListItem.vue  Menu.vue  MenuBtn.vue  MenuFooter.vue  MenuSet.vue  MenuTop.vue  NoData.vue  Top.vue
src/stores/: clipBoard.ts
src/utils/: index.ts
