[package]
name = "clipbot"
version = "1.0.0"
description = "An easy-to-use clipboard manager tool."
authors = ["wechat wechats@163.com"]
license = "MIT"
repository = "https://github.com/wechat/ClipBot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "updater",
  "window-unminimize",
  "window-unmaximize",
  "icon-png",
  "system-tray",
  "global-shortcut-all",
  "dialog-confirm",
  "window-maximize",
  "window-minimize",
  "window-create",
  "window-start-dragging",
  "shell-open",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tauri-plugin-clipboard = "0.6.0"
tauri-plugin-aptabase = "0.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
